changed UUID's and removed invalid ones

--- a/info.plist
+++ b/info.plist
@@ -6,11 +6,10 @@
 	<string>6502</string>
 	<key>ordering</key>
 	<array>
-		<string>8D1E7063-570E-4E88-AF2E-EA3CE330B2D3</string>
-		<string>317EC973-3612-4939-9E1B-C58413FAA7B1</string>
-		<string>29F1B5CB-112E-4440-A42E-B1F8BC53BAB3</string>
+		<string>814d43b7d-48dc-4f6e-a803-b21023909c63</string>
+		<string>4ade2039-95df-4777-abde-d2571c1b4f9c</string>
 	</array>
 	<key>uuid</key>
-	<string>A60F87A4-7467-4D87-8F4F-C5773872D499</string>
+	<string>eb9216a7-2ce7-4152-906a-5c4f3c602a4c</string>
 </dict>
 </plist>
